k3s-userapps/kubevirt-vms/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubevirt-vms
  labels:
    pod-security.kubernetes.io/enforce: privileged
