k3s-userapps/kubevirt-vms/claw-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: claw
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.179.20
  selector:
    kubevirt.io/domain: claw
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
