k3s-userapps/kubevirt-vms/hermes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-api
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.179.20
  selector:
    kubevirt.io/domain: claw
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
    - name: hermes-api
      port: 8642
      targetPort: 8642
      protocol: TCP
    - name: hermes-webui
      port: 9119
      targetPort: 9119
      protocol: TCP
