k3s-userapps/kubevirt-vms/cdi-uploadproxy-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`cdi-upload.kirillorlov.pro`)
      services:
        - name: cdi-uploadproxy
          port: 443
  tls:
    passthrough: true
